--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,7 +1,10 @@
-book_filename: "umfragen-auswerten"
-new_session: true
+book_filename: "umfragen auswerten"
 before_chapter_script: _common.R
 delete_merged_file: true
+output_dir: "docs"
+new_session: yes
 language:
   ui:
-    chapter_name: "Chapter "
+    chapter_name: "Kapitel "
+
+
